# AbstractVoice

./: .gitignore  2025-10-19-refactor.txt  ACKNOWLEDGMENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALLATION.md  README.md  ROADMAP.md  SECURITY.md  UPGRADE_STATUS.md  final_verification.py  llms-full.txt  llms.txt  pyproject.toml  requirements.txt
.vtest/: pyvenv.cfg
abstractvoice/: __init__.py  __main__.py  artifacts.py  dependency_check.py  model_manager.py  prefetch.py  quality_preset.py  recognition.py  simple_model_manager.py  stop_phrase.py  text_sanitize.py  voice_manager.py  voice_profiles.py
abstractvoice/adapters/: __init__.py  base.py  stt_faster_whisper.py  tts_audiodit.py  tts_omnivoice.py  tts_piper.py  tts_registry.py
abstractvoice/aec/: __init__.py  webrtc_apm.py
abstractvoice/assets/voice_profiles/: omnivoice_profiles.json
abstractvoice/audio/: __init__.py  fade.py  recorder.py  resample.py
abstractvoice/audiodit/: __init__.py  configuration_audiodit.py  modeling_audiodit.py  runtime.py
abstractvoice/cloning/: __init__.py  engine_audiodit.py  engine_chroma.py  engine_f5.py  engine_omnivoice.py  manager.py  store.py
abstractvoice/compute/: __init__.py  device.py  dtype.py
abstractvoice/config/: __init__.py  voice_catalog.py
abstractvoice/examples/: cli_repl.py  llm_provider.py  voice_cli.py
abstractvoice/integrations/: __init__.py  abstractcore.py  abstractcore_plugin.py
abstractvoice/omnivoice/: __init__.py  prompt_cache.py  runtime.py
abstractvoice/tts/: __init__.py  adapter_tts_engine.py  delivery_mode.py  duration_estimator.py  text_chunking.py  text_to_speech_stream.py  time_stretch.py  tts_engine.py
abstractvoice/vad/: voice_detector.py  webrtcvad_compat.py
abstractvoice/vm/: __init__.py  common.py  core.py  manager.py  mm_mixin.py  stt_mixin.py  tts_mixin.py
docs/: README.md  acronyms.md  api.md  architecture.md  benchmark.md  dependencies.md  development.md  faq.md  getting-started.md  getting_started.md  installation.md  model-management.md  multilingual.md  overview.md  public_api.md  repl_guide.md  voice_cloning_2026.md  voices-and-licenses.md
docs/adr/: 0001-local_assistant_out_of_box.md  0002_barge_in_interruption.md  0003_cloning_reference_text_fallback.md  0004_streaming_and_cancellation_for_cloned_tts.md  0005_torch_device_and_dtype_policy.md
docs/backlog/: README.md  template.md
docs/backlog/completed/: 001-piper-tts-adapter.md  002-faster-whisper-adapter.md  003-voicemanager-adapter-integration-hardening.md  004_public_api_v0_6.md  005_voice_manager_refactor.md  006_repl_as_assistant.md  007_repo_hygiene.md  008_voice_cloning_mit_apache.md  009_voice_cloning_adapter_impl.md  011_remove_legacy_voicemanager_blob.md  012_model_management_consolidation.md  014_llms_txt_best_practices.md  015_adr0002_phase1_wait_mode_stop_phrase.md  016_adr0002_phase2_optional_aec.md  017_remove_legacy_coqui_model_management.md  018_repl_voice_cloning_workflow.md  019_cloning_ux_no_surprise_downloads.md  020_cloning_reference_text_autofallback.md  021_streaming_and_cancellation_for_cloned_tts.md  022_repl_cloned_voice_management.md  024_python_version_support_contract.md  026_update_docs_to_piper_first.md  030_chroma_4b_optional_s2s_and_cloning.md  032_markdown_speech_sanitizer.md
docs/backlog/planned/: 003-voicemanager-adapter-integration-hardening.md  007_repo_hygiene.md  009_voice_cloning_adapter_impl.md  010_voice_cloning_candidate_selection.md  012_model_management_consolidation.md  013_openai_compatible_audio_endpoint.md  014_llms_txt_best_practices.md  023_kws_stop_phrase_detector.md  024_python_version_support_contract.md  (+12 more)
docs/devnotes/: 2025-10-19-docu.txt  2025-10-19-refactor.txt  CLI_DOCUMENTATION_INDEX.md  CLI_FLOW_DIAGRAMS.txt  CLI_INVESTIGATION_REPORT.md  CLI_QUICK_REFERENCE.md  CODE_VERIFICATION.md  DOCUMENTATION_UPDATE_SUMMARY.md  FIXES_SUMMARY.md  INSTALLATION.md  INVESTIGATION_SUMMARY.md  MULTILINGUAL_FIXES.md  REFACTORING_SUMMARY.md  UPGRADE_TO_V0.3.0.md  VERIFICATION_REPORT.md
docs/reports/: IMPLEMENTATION_REPORT_2026-01-21.md  UPGRADE_STATUS.md  status-report-2026-01-21.md
docs/research/: Agentic Voice Assistant Stack Deep Research.md  Voice Assistant Architecture Investigation.md
examples/: bench_tts.py  bench_tts_suite.py  chroma_clone_repl.py  library_integration.py  third_party_api_demo.py
tests/: test_abstractcore_plugin.py  test_adr0002_phase1.py  test_adr0002_phase2_optional_aec.py  test_artifact_tools.py  test_audio_fade.py  test_audio_player_resample.py  test_audiodit_smoke_optional.py  test_callbacks.py  test_chroma_cloning_integration.py  test_cloned_tts_cancellation.py  test_cloning_reference_text_autofallback.py  test_compute_dtype_policy.py  test_duration_estimator.py  test_faster_whisper_adapter.py  test_fresh_install.py  test_full_mode_echo_gate.py  test_llm_think_strip.py  test_omnivoice_prompt_cache.py  test_omnivoice_smoke_optional.py  test_open_tts_text_stream.py  test_piper_adapter.py  test_recognition_audio_level_callback.py  test_reference_text_autofallback_offline_cached_model.py  test_repl_interrupt_cloned_voice_does_not_resume_old_audio.py  test_stop_phrase_continuous_detector.py  test_stop_phrase_matching_is_tolerant.py  test_stop_speaking_restores_recognizer_state.py  test_stt_mixin_audio_level_forwarding.py  test_text_chunking_streaming.py  test_text_sanitize_markdown.py  test_tts_delivery_mode_streaming.py  test_tts_sanitize_syntax_default.py  test_voice_clone_store_delete_rename.py  test_voice_cloner_engine_dispatch.py  test_voice_cloning_integration_hal9000.py  test_voice_cloning_store.py  test_voice_mode_wait_pauses_listening_during_tts.py  test_voice_profiles_abstraction.py  test_voice_recognizer_ptt_profile.py
tests/integration/: test_artifact_tools_file_store_roundtrip.py
third_party_licenses/: README.md  longcat_audiodit_license.txt
(+1 files in other folders)
