[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abstractvoice"
dynamic = ["version"]
description = "A modular Python library for voice interactions with AI systems"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Laurent-Philippe Albou", email = "contact@abstractcore.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "appdirs>=1.4.0",
    # Core TTS: Piper (lightweight, no system dependencies)
    "piper-tts>=1.2.0",
    "huggingface_hub>=0.20.0",
    # Core STT: faster-whisper (4x faster than openai-whisper)
    "faster-whisper>=0.10.0",
    # Core audio
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    # Core VAD (needed for listen() out-of-the-box)
    "webrtcvad>=2.0.10",
]

[project.optional-dependencies]
# Core voice functionality - install this for basic TTS/STT features
voice = [
    "sounddevice>=0.4.6",
    "webrtcvad>=2.0.10",
    "soundfile>=0.12.1",
]

# Audio effects (optional; only needed for speed/pitch processing)
audio-fx = [
    "librosa>=0.10.0",
]

# Voice cloning (optional; research-grade, heavy deps).
cloning = [
    "f5-tts>=1.1.0",
]

# Optional AEC (Acoustic Echo Cancellation) for true barge-in.
# This is intentionally opt-in because platform support/toolchain requirements vary.
aec = [
    "aec-audio-processing>=1.0.1",
]

# Speech-to-Text functionality
stt = [
    "openai-whisper>=20230314",
    "tiktoken>=0.6.0",
]

# Web API functionality
web = [
    "flask>=2.0.0",
]

# All features combined (Piper + VITS + Whisper + Web)
all = [
    "piper-tts>=1.2.0",
    "sounddevice>=0.4.6",
    "webrtcvad>=2.0.10",
    "openai-whisper>=20230314",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "flask>=2.0.0",
    "tiktoken>=0.6.0",
    # Optional advanced features
    "f5-tts>=1.1.0",
    "aec-audio-processing>=1.0.1",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

# Complete voice functionality - TTS + STT + Audio I/O (most common use case)
voice-full = [
    "sounddevice>=0.4.6",
    "webrtcvad>=2.0.10",
    "openai-whisper>=20230314",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "tiktoken>=0.6.0",
]

# Core STT-only (lightweight, no TTS)
core-stt = [
    "openai-whisper>=20230314",
    "tiktoken>=0.6.0",
]

# Audio processing only (for custom TTS/STT implementations)
audio-only = [
    "sounddevice>=0.4.6",
    "webrtcvad>=2.0.10",
    "soundfile>=0.12.1",
]

[project.urls]
Repository = "https://github.com/lpalbou/abstractvoice"
Documentation = "https://github.com/lpalbou/abstractvoice#readme"

[project.scripts]
abstractvoice = "abstractvoice.examples.voice_cli:main"

[tool.setuptools.dynamic]
version = {attr = "abstractvoice.__version__"} 

[tool.setuptools.packages.find]
# Explicit discovery avoids setuptools accidentally treating `audio_samples/`
# (or any other repo folder) as an installable top-level package.
include = ["abstractvoice*"]
exclude = ["audio_samples*", "tests*", "docs*"]